--- a/modules/retail/pages/retail-install-unified.adoc
+++ b/modules/retail/pages/retail-install-unified.adoc
@@ -101,18 +101,19 @@ For Branch Server, the expected modules are:
 * SUSE Manager Retail Branch Server Module
 
 
-
+// 2022-01-04, ke: I think there is no need to mention the still supported(?)
+//                 previous SP here.
 .Procedure: Configuring and Registering the Branch Server
-. Create an activation key based on the [systemitem]``SLE-Product-SUSE-Manager-Retail-Branch-Server-4.1-Pool`` base channel.
+. Create an activation key based on the [systemitem]``SLE-Product-SUSE-Manager-Retail-Branch-Server-4.2-Pool`` base channel.
   For more information about activation keys, see xref:client-configuration:activation-keys.adoc[].
 . In the [guimenu]``Child Channels`` listing, select the recommended channels by clicking the ``include recommended`` icon:
 +
-* SLE-Module-Basesystem15-SP2-Pool for x86_64 SMRBS 4.1
-* SLE-Module-Basesystem15-SP2-Updates for x86_64 SMRBS 4.1
-* SLE-Module-Server-Applications15-SP2-Pool for x86_64 SMRBS 4.1
-* SLE-Module-Server-Applications15-SP2-Updates for x86_64 SMRBS 4.1
-* SLE-Product-SUSE-Manager-Retail-Branch-Server-4.1-Updates for x86_64
-. Use this activation key in {productname} Proxy registration at xref:installation:proxy-registration.adoc[].
+* SLE-Module-Basesystem15-SP3-Pool for x86_64 SMRBS 4.2
+* SLE-Module-Basesystem15-SP3-Updates for x86_64 SMRBS 4.2
+* SLE-Module-Server-Applications15-SP3-Pool for x86_64 SMRBS 4.2
+* SLE-Module-Server-Applications15-SP3-Updates for x86_64 SMRBS 4.2
+* SLE-Product-SUSE-Manager-Retail-Branch-Server-4.2-Updates for x86_64
+. Use this activation key in {productname} Proxy registration at xref:installation-and-upgrade:proxy-registration.adoc[].
 . Configure {productname} Proxy.
   For more information on how to do this, see xref:installation:proxy-setup.adoc[].
 
