--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -140,6 +140,6 @@ Important is, that the clients do not get disconnected when the new CA is activa
 Deploy the 'old' and the 'new' Root CA certificates to the affected clients and trust them.
 Use a configuration channel to deploy the certificte files to the clients and the remote command feature to regenerate the trust store.
 
-After the new certificates are activated on the {productname} Server and Proxies, test if the connections are working
-and actions can still be scheduled on the clients. If this is the case, the 'old' Root CA can be removed from clients.
+After the new certificates are activated on the {productname} Server and Proxies, test if the connections are working and actions can still be scheduled on the clients.
+If this is the case, the 'old' Root CA can be removed from clients.
 
