--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -38,8 +38,7 @@ custom_gpgkeys:
   - my_second_gpgkey.gpg
 ----
 
-Additionally create in the {salt} filesystem a directory named `gpg` and place there the gpg key files with the same name used in the
-`custom_gpgkeys` pillar data.
+Additionally in the {salt} filesystem create a directory named [path]``gpg`` and store there the GPG key files with the name specified in the [iteral]``custom_gpgkeys`` pillar data.
 // I think the ls command is here to show the contents of the directory.
 // In this case, the ls is superfluous.
 
