--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -11,8 +11,8 @@ The GPG key URL which is set of a software channel must exist.
 In case it is a file URL, the GPG key file must be deployed on the client before the software channel is used.
 
 The GPG keys for the Client Tools Channels of {redhat} based clients are deployed on the client into [path]``/etc/pki/rpm-gpg/`` and can be referenced with file URLs.
-Same happens for the Expanded Support GPG key. Only in case a software channel is assigned to the client
-they will be imported and trusted by the system.
+Same is the case with the GPG keys of  Expanded Support clients.
+Only in case a software channel is assigned to the client they will be imported and trusted by the system.
 
 [NOTE]
 ====
