--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -71,8 +71,7 @@ Having repositories assigned directly to clients not served by {productname} is 
 It can cause trouble.
 Therfore bootstrapping via Salt disable all local repositories at the beginning of the bootstrap process.
 
-Also later on every use of the channel state, for example when executing a Highstate or a Package installation,
-all locally assigned repositories are disabled again.
+Later, during every use of the channel state, for example when executing a Highstate or a package installation, all locally assigned repositories are disabled again.
 
 All software packages which are used on the clients should come from channels served by {productname}.
 For more informationon how to create custom channel, see ``Custom Channels`` at xref:administration:custom-channels.adoc[].
