--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -96,7 +96,7 @@ web.ssh_salt_pre_flight_script = /usr/share/susemanager/salt-ssh/preflight.sh
 
 web.ssh_use_salt_thin = false
 ----
-Create the extra drop-in configuration file for Salt Master [path]``/etc/salt/master.d/ssh-preflight.conf``:
+Create the extra drop-in configuration file for Salt Master [path]``/etc/salt/master.d/ssh-preflight.conf`` with [literal]``ssh_run_pre_flight`` set to [literal]``true``:
 ----
 ssh_run_pre_flight: true
 ----
