--- a/modules/client-configuration/pages/snippets/arch-other-note.adoc
+++ b/modules/client-configuration/pages/snippets/arch-other-note.adoc
@@ -1,5 +1,5 @@
 [NOTE]
 ====
-In the following section, descriptions often defaults to the [literal]``x86_64`` architecture.
+In the following section, descriptions often default to the [literal]``x86_64`` architecture.
 Replace it with other architectures if appropriate.
 ====
