add 20.04 universe backports channel

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -89,6 +89,7 @@ Version 20.04 also requires the Universe channels:
 | Universe Channel         | ubuntu-2004-amd64-universe-uyuni
 | Universe Updates Channel | ubuntu-2004-amd64-universe-updates-uyuni
 | Universe Security Updates Channel | ubuntu-2004-amd64-universe-security-uyuni
+| Universe Backports Channel | ubuntu-2004-amd64-universe-backports-uyuni
 
 |===
 
