--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -3,8 +3,8 @@ But third party packages signed by a different GPG key need manual handling.
 The clients can be successfully bootstrapped without the GPG key being trusted.
 However, you cannot install new client tool packages or update them until the keys are trusted.
 
-Salt clients use now GPG key information entered for a software channel to manage the trusted keys.
-When a software channel with GPG key information is assigned to a client, the key gets trusted as soon as the channel is refreshed or the first package gets installed from this channel.
+Salt clients now use GPG key information entered for a software channel to manage trusted keys.
+When a software channel with GPG key information is assigned to a client, the key is trusted once the channel is refreshed or the first package is installed from the channel.
 
 // The meaning of the following sentence is not clear
 The GPG key URL which is set of a software channel must exist.
@@ -23,7 +23,7 @@ If a user configures an own GPG key to sign the metadata as described in "Use Yo
 
 === User defined GPG keys
 
-Users can define their own GPG keys to be deployed to the client.
+Users can define custom GPG keys to be deployed to a client.
 
 By providing some pillar data and providing the GPG key files in the {salt} filesystem, they are automatically deployed to the client.
 
@@ -49,7 +49,7 @@ ls -la /etc/salt/gpg/
 /etc/salt/gpg/my_second_gpgkey.gpg
 ----
 
-The keys are now deployed to the client at [path]``/etc/pki/rpm-gpg/my_first_gpg.key`` and [path]``/etc/pki/rpm-gpg/my_second_gpgkey.gpg``.
+The keys are deployed to the client at [path]``/etc/pki/rpm-gpg/my_first_gpg.key`` and [path]``/etc/pki/rpm-gpg/my_second_gpgkey.gpg``.
 
 The last step is to add the URL to the GPG key URL field of the software channel.
 Navigate to menu:Software[Manage > Channels] and select the channel you want to modify.
@@ -75,5 +75,6 @@ You do not need to delete any previously stored keys.
 ====
 Trusting a GPG key is important for security on clients. 
 It is the task of the admin to decide which keys are needed and can be trusted.
-Because a software channel cannot be used when the GPG key is not trusted, the decision of assigning a channel to a client depends on the decision of trusting the key.
+A software channel cannot be used when a GPG key is not trusted.
+Assigning a channel to a client depends on if its GPG key has been trusted.
 ====
