GPG snippet title cleanup - title added.

--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -1,3 +1,6 @@
+[[trust-gpg-keys-on-clients]]
+== Trust GPG Keys on Clients
+
 Operating systems either trust their own GPG keys directly or at least ship them installed with the minimal system.
 But third party packages signed by a different GPG key need manual handling.
 The clients can be successfully bootstrapped without the GPG key being trusted.
