--- a/modules/administration/pages/auth-methods-sso-example.adoc
+++ b/modules/administration/pages/auth-methods-sso-example.adoc
@@ -1,7 +1,7 @@
 [[auth-methods-sso-example]]
 = Example SSO Implementation
 
-In this example, SSO is implemented by exposing three endpoints with {productname}, and using Keycloak as the identity service provider (IdP).
+In this example, SSO is implemented by exposing three endpoints with {productname}, and using Keycloak 9.0.2 or later as the identity service provider (IdP).
 
 Start by setting up the {productname} Server, and the Keycloak IdP.
 Then you can add the endpoints as clients, and create users.
@@ -21,9 +21,9 @@ For Keycloak support, see https://www.keycloak.org/.
     Replace ``<FQDN>`` with the fully qualified domain name of your {productname} installation:
 +
 ----
-java.sso.onelogin.saml2.sp.entityid = <FQDN>/rhn/manager/sso/metadata
-java.sso.onelogin.saml2.sp.assertion_consumer_service.url = <FQDN>/rhn/manager/sso/acs
-java.sso.onelogin.saml2.sp.single_logout_service.url = <FQDN>/rhn/manager/sso/sls
+java.sso.onelogin.saml2.sp.entityid = https://<FQDN>/rhn/manager/sso/metadata
+java.sso.onelogin.saml2.sp.assertion_consumer_service.url = https://<FQDN>/rhn/manager/sso/acs
+java.sso.onelogin.saml2.sp.single_logout_service.url = https://<FQDN>/rhn/manager/sso/sls
 ----
 . In the configuration file, determine the three endpoints to expose:
 +
@@ -33,7 +33,7 @@ java.sso.onelogin.saml2.idp.single_sign_on_service.url
 java.sso.onelogin.saml2.idp.single_logout_service.url
 ----
 . In the IdP metadata, locate the public x509 certificate.
-    It uses this format: ``<IdP_Address>/auth/realms/<Your_Realm>/protocol/saml/descriptor``.
+    It uses this format: ``<IdP_URL>/auth/realms/<Your_Realm>/protocol/saml/descriptor``.
     In the configuration file, specify the public x509 certificate of the IdP:
 +
 ----
@@ -60,9 +60,8 @@ docker run -td --name=idp -p 8080:8080 -e KEYCLOAK_USER=<user> -e KEYCLOAK_PASSW
 * In the ``Name`` field, enter a name for the realm.
     For example, ``SUMA``.
 * Toggle the ``Enabled`` switch to ``On``.
-* In the ``Endpoints`` field, type ``SAML 2.0 Identity Provider Metadata``.
-    This endpoint is ``<IdP_Address>/auth/realms/<Realm_Name>/protocol/saml/descriptor`` which describes the endpoints and certificate in the {productname} configuration file.
-// Probably needs more explanation here. --LKB 20200415
+* In the ``Endpoints`` field, click the ``SAML 2.0 Identity Provider Metadata`` link.
+  This will lead you to ``<IdP_URL>/auth/realms/<Realm_Name>/protocol/saml/descriptor``, where you will see the endpoints and certificate to copy into the {productname} configuration file.
 
 
 
@@ -80,7 +79,7 @@ Keycloak refers to endpoints as clients.
 * Toggle the ``Include AuthnStatement`` switch to ``On``.
 * Toggle the ``Sign Assertions`` switch to ``On``.
 * In the ``Signature Algorithm`` field, select ``RSA_SHA1``.
-* In the ``SAML Signature Key Name`` field, select the key.
+* In the ``SAML Signature Key Name`` field, select ``Key ID``.
 * In the ``Canonicalization Method`` field, select ``Exclusive``.
 . In the ``Fine Grain SAML Endpoint Configuration`` section, add the two endpoints using these details:
 +
@@ -95,11 +94,11 @@ When you have added the endpoints as clients, you can configure the client scope
 
 .Procedure: Configuring Client Scope and Mappers
 . In the Keycloak {webui}, navigate to the menu:Clients[Client Scopes] tab and assign ``role_list`` as the default client scope.
-. Navigate to the menu:Clients[Mappers] tab and add a user attribute ``Uid`` mapper, using the default values.
+. Navigate to the menu:Clients[Mappers] tab and add a mapper for user attribute ``uid``, using the default values.
     This SAML attribute is expected by {productname}.
 . Navigate to the menu:Users[Admin] section and create an administrative user.
     This user does not need to match the {productname} administrative user.
-. Navigate to the menu:Users[Role Mappings] tab, add a ``uid`` attribute with a value that matches the username of the {productname} administrative user.
+. Navigate to the menu:Users[Role Mappings] tab, add an attribute named ``uid`` with a value that matches the username of the {productname} administrative user.
 . Navigate to the menu:Users[Credentials] tab, and set the same password as used by the {productname} administrative user.
 . Save your changes.
 
