--- a/modules/administration/pages/repo-metadata.adoc
+++ b/modules/administration/pages/repo-metadata.adoc
@@ -85,18 +85,9 @@ This means that all clients connected to the server need to trust the new  GPG k
 
 
 .Procedure: Importing GPG keys on Clients
-. For RPM-based client systems, use these remote commands:
-+
-----
-rpm --import http://server.example.com/pub/mgr-gpg-pub.key
-----
-. For Ubuntu clients, you need to reassign the channels, which automatically pick up the new GPG key.
-    You can do this through the {productname} {webui}, or from the command line on the server with this command:
-+
-----
-salt <ubuntu-client> state.apply channels
-----
-. OPTIONAL: For Salt clients, you might prefer to use a state to manage your GPG keys.
+. Deploying GPG keys to the clients works with salt states.
+
+. Apply the highstate with the {productname} {webui}.
 
 
 For more information about troubleshooting GPG keys, see xref:administration:tshoot-sync.adoc[].
