--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -3,8 +3,8 @@
 
 This section contains information about registering clients running these {nbsp}{micro} operating systems:
 
-* {micro}{nbsp}5.1 {x86_64}
-* {micro}{nbsp}5.1 {arm64}
+* {micro}{nbsp}5.1 and 5.2 {x86_64}
+* {micro}{nbsp}5.1 and 5.2 {arm64}
 
 [WARNING]
 ====
@@ -54,10 +54,16 @@ The products you need for this procedure are:
 | Product Name
 
 | {micro} 5.1 {x86_64}
-| SUSE Linux Enterprise Micro 5.1 aarch64
+| SUSE Linux Enterprise Micro 5.1 x86_64
 
 | {micro} 5.1 {arm64}
+| SUSE Linux Enterprise Micro 5.1 aarch64
+
+| {micro} 5.2 {x86_64}
 | SUSE Linux Enterprise Micro 5.1 x86_64
+
+| {micro} 5.2 {arm64}
+| SUSE Linux Enterprise Micro 5.1 aarch64
 
 |===
 
@@ -85,6 +91,14 @@ The channels you need for this procedure are:
 | {micro} 5.1 {arm64}
 | suse-microos-5.1-pool-aarch64
 | suse-microos-5.1-updates-aarch64
+
+| {micro} 5.2 {x86_64}
+| suse-microos-5.2-pool-x86_64
+| suse-microos-5.2-updates-x86_64
+
+| {micro} 5.2 {arm64}
+| suse-microos-5.2-pool-aarch64
+| suse-microos-5.2-updates-aarch64
 
 |===
 
