--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -5,6 +5,7 @@ This section contains information about registering clients running these {nbsp}
 
 * {micro}{nbsp}5.1 and 5.2 {x86_64}
 * {micro}{nbsp}5.1 and 5.2 {arm64}
+* {micro}{nbsp}5.1 and 5.2 {zsystems} (s390x)
 
 [WARNING]
 ====
@@ -59,11 +60,17 @@ The products you need for this procedure are:
 | {micro} 5.1 {arm64}
 | SUSE Linux Enterprise Micro 5.1 aarch64
 
+| {micro} 5.1 {s390x}
+| SUSE Linux Enterprise Micro 5.1 s390x
+
 | {micro} 5.2 {x86_64}
 | SUSE Linux Enterprise Micro 5.2 x86_64
 
 | {micro} 5.2 {arm64}
 | SUSE Linux Enterprise Micro 5.2 aarch64
+
+| {micro} 5.2 {s390x}
+| SUSE Linux Enterprise Micro 5.2 s390x
 
 |===
 
@@ -88,9 +95,9 @@ The channels you need for this procedure are:
 | suse-microos-5.1-pool-x86_64
 | suse-microos-5.1-updates-x86_64
 
-| {micro} 5.1 {arm64}
-| suse-microos-5.1-pool-aarch64
-| suse-microos-5.1-updates-aarch64
+| {micro} 5.1 {zsystems} ({s390x})
+| suse-microos-5.1-pool-s390x
+| suse-microos-5.1-updates-s390x
 
 | {micro} 5.2 {x86_64}
 | suse-microos-5.2-pool-x86_64
@@ -99,6 +106,10 @@ The channels you need for this procedure are:
 | {micro} 5.2 {arm64}
 | suse-microos-5.2-pool-aarch64
 | suse-microos-5.2-updates-aarch64
+
+| {micro} 5.2 {zsystems} ({s390x})
+| suse-microos-5.2-pool-s390x
+| suse-microos-5.2-updates-s390x
 
 |===
 
