--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -3,8 +3,10 @@
 
 This section contains information about registering clients running these {nbsp}{micro} operating systems:
 
-* {micro}{nbsp}5.1 {x86_64}
-* {micro}{nbsp}5.1 {arm64}
+* {micro}{nbsp}5.1, 5.2, and 5.3 {x86_64}
+* {micro}{nbsp}5.1, 5.2, and 5.3 {arm64}
+* {micro}{nbsp}5.1, 5.2, and 5.3 {zsystems} (s390x)
+
 
 [WARNING]
 ====
@@ -54,13 +56,33 @@ The products you need for this procedure are:
 | Product Name
 
 | {micro} 5.1 {x86_64}
-| SUSE Linux Enterprise Micro 5.1 aarch64
-
-| {micro} 5.1 {arm64}
 | SUSE Linux Enterprise Micro 5.1 x86_64
 
-|===
+| {micro} 5.1 {arm64}
+| SUSE Linux Enterprise Micro 5.1 aarch64
 
+| {micro} 5.1 {s390x}
+| SUSE Linux Enterprise Micro 5.1 s390x
+
+| {micro} 5.2 {x86_64}
+| SUSE Linux Enterprise Micro 5.2 x86_64
+
+| {micro} 5.2 {arm64}
+| SUSE Linux Enterprise Micro 5.2 aarch64
+
+| {micro} 5.2 {s390x}
+| SUSE Linux Enterprise Micro 5.2 s390x
+
+| {micro} 5.3 {x86_64}
+| SUSE Linux Enterprise Micro 5.3 x86_64
+
+| {micro} 5.3 {arm64}
+| SUSE Linux Enterprise Micro 5.3 aarch64
+
+| {micro} 5.3 {s390x}
+| SUSE Linux Enterprise Micro 5.3 s390x
+
+|===
 
 include::snippets/addchannels_vendor_webui.adoc[]
 
@@ -83,11 +105,38 @@ The channels you need for this procedure are:
 | suse-microos-5.1-updates-x86_64
 
 | {micro} 5.1 {arm64}
-| suse-microos-5.1-pool-aarch64
-| suse-microos-5.1-updates-aarch64
+| suse-microos-5.1-pool-arm64
+| suse-microos-5.1-updates-arm64
+
+| {micro} 5.1 {zsystems} ({s390x})
+| suse-microos-5.1-pool-s390x
+| suse-microos-5.1-updates-s390x
+
+| {micro} 5.2 {x86_64}
+| suse-microos-5.2-pool-x86_64
+| suse-microos-5.2-updates-x86_64
+
+| {micro} 5.2 {arm64}
+| suse-microos-5.2-pool-aarch64
+| suse-microos-5.2-updates-aarch64
+
+| {micro} 5.2 {zsystems} ({s390x})
+| suse-microos-5.2-pool-s390x
+| suse-microos-5.2-updates-s390x
+
+| {micro} 5.3 {x86_64}
+| sle-micro-5.3-pool-x86_64
+| sle-micro-5.3-updates-x86_64
+
+| {micro} 5.3 {arm64}
+| sle-micro-5.3-pool-arm64
+| sle-micro-5.3-updates-arm64
+
+| {micro} 5.3 {zsystems} ({s390x})
+| sle-micro-5.3-pool-s390x
+| sle-micro-5.3-updates-s390x
 
 |===
-
 
 include::snippets/addchannels_vendor_cli.adoc[]
 
