--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -67,7 +67,7 @@ endif::[]
 *** xref:tshoot-logintimeout.adoc[Troubleshooting Login Timeout]
 *** xref:tshoot-notifications.adoc[Troubleshooting Notifications]
 *** xref:tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
-*** xref:tshoot-packages-proxy.adoc[Proxy Cache Repository]
+*** xref:tshoot-packages-proxy.adoc[Troubleshooting Proxy Cache Repository]
 *** xref:tshoot-packages.adoc[Troubleshooting Packages]
 *** xref:tshoot-registerclones.adoc[Troubleshooting Registering Cloned Clients]
 *** xref:tshoot-registertradrhel.adoc[Troubleshooting Registering Traditional RHEL Clients]
