--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -290,7 +290,29 @@ endif::[]
 {debian} and {ubuntu} lists the {x86_64} architecture as amd64.
 ====
 
+=== Unsupported Client Systems
 
+When the distibution reaches end-of-life, it enters grace period of 3 months when the support is considered deprecated.
+After that period, the product is considered unsupported.
+Any support may only be available on the best-effort basis.
+
+
+//[[eol.clients]]
+[cols="1,1,1,1", options="header"]
+.Clients approaching end-of-life and end of support
+|===
+
+| Operating System
+| Architecture
+| End-of-life date
+| End of support
+
+| {debian} 9
+| {x86_64}, {aarch64}, armv7l, i586
+| 2022-06-30
+| 2022-09-30
+
+|===
 
 == Supported Tools Packages
 
