fix path to state and pillar files

--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -36,7 +36,7 @@ Define the pillar key [literal``custom_gpgkeys`` for the client you want to depl
 // I think the cat command is here to show the contents of the file.
 // In this case, the cat is superfluous.
 ----
-cat /etc/pillar/mypillar.sls
+cat /srv/pillar/mypillar.sls
 custom_gpgkeys:
   - my_first_gpg.key
   - my_second_gpgkey.gpg
@@ -47,9 +47,9 @@ Additionally in the {salt} filesystem create a directory named [path]``gpg`` and
 // In this case, the ls is superfluous.
 
 ----
-ls -la /etc/salt/gpg/
-/etc/salt/gpg/my_first_gpg.key
-/etc/salt/gpg/my_second_gpgkey.gpg
+ls -la /srv/salt/gpg/
+/srv/salt/gpg/my_first_gpg.key
+/srv/salt/gpg/my_second_gpgkey.gpg
 ----
 
 The keys are now deployed to the client at [path]``/etc/pki/rpm-gpg/my_first_gpg.key`` and [path]``/etc/pki/rpm-gpg/my_second_gpgkey.gpg``.
