--- a/modules/client-configuration/pages/snippets/eol-clients.adoc
+++ b/modules/client-configuration/pages/snippets/eol-clients.adoc
@@ -1,4 +1,10 @@
 [[eol.clients]]
+//EOL Client Systems
+
+When the distibution reaches end-of-life, it enters grace period of 3 months when the support is considered deprecated.
+After that period, the product is considered unsupported.
+Any support may only be available on the best-effort basis.
+
 [cols="1,1,1,1", options="header"]
 .Clients approaching end-of-life and end of support
 |===
