--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -290,12 +290,11 @@ endif::[]
 {debian} and {ubuntu} lists the {x86_64} architecture as amd64.
 ====
 
-=== Unsupported Client Systems
+//=== Unsupported Client Systems
 
-When the distibution reaches end-of-life, it enters grace period of 3 months when the support is considered deprecated.
-After that period, the product is considered unsupported.
-Any support may only be available on the best-effort basis.
-
+//When the distibution reaches end-of-life, it enters grace period of 3 months when the support is considered deprecated.
+//After that period, the product is considered unsupported.
+//Any support may only be available on the best-effort basis.
 
 //EOL clients
 include::snippets/eol-clients.adoc[]
