--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -290,6 +290,8 @@ endif::[]
 {debian} and {ubuntu} lists the {x86_64} architecture as amd64.
 ====
 
+//EOL clients
+include::snippets/eol-clients.adoc[]
 
 
 == Supported Tools Packages
