--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -39,7 +39,7 @@ The products you need for this procedure are:
 .Ubuntu Products - WebUI
 |===
 
-| OS Version | Product Name
+| OS Version     | Product Name
 | {ubuntu} 20.04 | Ubuntu 20.04
 | {ubuntu} 22.04 | Ubuntu 22.04
 |===
@@ -54,9 +54,9 @@ The channels you need for this procedure are:
 .Ubuntu Channels - CLI
 |===
 
-| OS Version | Base Channel
-| {ubuntu} 20.04 | ubuntu-2004-amd64-main-amd64
-| {ubuntu} 22.04 | ubuntu-2204-amd64-main-amd64
+| OS Version     | Base Channel
+| {ubuntu} 20.04 | ubuntu-2004-pool-amd64-uyuni
+| {ubuntu} 22.04 | ubuntu-2204-pool-amd64-uyuni
 |===
 
 include::snippets/addchannels_vendor_cli.adoc[]
@@ -74,8 +74,8 @@ The channels you need for this procedure are:
 
 | OS Version | Base Channel | Main Channel | Updates Channel | Security Channel | Client Channel
 
-| {ubuntu} 20.04 | ubuntu-2004-amd64-main for amd64 | ubuntu-2004-amd64-main-uyuni | ubuntu-2004-amd64-main-updates-uyuni | ubuntu-2004-amd64-main-security-uyuni | ubuntu-2004-amd64-uyuni-client
-| {ubuntu} 22.04 | ubuntu-2204-amd64-main for amd64 | ubuntu-2204-amd64-main-uyuni | ubuntu-2204-amd64-main-updates-uyuni | ubuntu-2204-amd64-main-security-uyuni | ubuntu-2204-amd64-uyuni-client
+| {ubuntu} 20.04 | ubuntu-2004-pool-amd64-uyuni | ubuntu-2004-amd64-main-uyuni | ubuntu-2004-amd64-main-updates-uyuni | ubuntu-2004-amd64-main-security-uyuni | ubuntu-2004-amd64-uyuni-client
+| {ubuntu} 22.04 | ubuntu-2204-pool-amd64-uyuni | ubuntu-2204-amd64-main-uyuni | ubuntu-2204-amd64-main-updates-uyuni | ubuntu-2204-amd64-main-security-uyuni | ubuntu-2204-amd64-uyuni-client
 |===
 
 include::snippets/addchannels_novendor_cli.adoc[]
