--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -38,18 +38,22 @@ If you register openSUSE Leap 15 or SLE 15 systems using Python 2, the bootst
 
 
 
-== mgr-bootstrap
+== The [command]``mgr-bootstrap`` command
 
 The [command]``mgr-bootstrap`` command generates custom bootstrap scripts.
-Such a script is used by {productname} client systems for the purpose of simplifying their initial configuration.
+A bootstrap script is used by {productname} client systems for simplifying their initial registration and configuration.
 
-The arguments --activation-keys= and --script=, are typically the only mandatory arguments.
+The arguments [option]``--activation-keys`` and [option]``--script``, are the only mandatory arguments.
+On the {productname} Server, as root at the command line execute it with the mandatory arguments.
+Replace [systemitem]``<ACTIVATION_KEYS`` and [systemitem]``<EDITED_NAME>`` with your values:
 
+----
 mgr-bootstrap --activation-key=<ACTIVATION_KEYS> --script=bootstrap-<EDITED NAME>.sh
+----
 
-The mgr-bootstrap tool includes several other options, including the ability to set a specific hostname, set specific gpg keys, and set the registration method (traditional, salt-minion, salt-bundle).
+The [command]``mgr-bootstrap`` command offers several other options, including the ability to set a specific hostname, set specific GPG keys, and set the registration method (traditional, salt-minion, salt-bundle).
 
-For a more detailed view of available options, see "man mgr-bootstrap", or run "mgr-bootstrap --help".
+For more information, see the [literal]``mgr-bootstrap`` man page, or run [command]``mgr-bootstrap --help``.
 
 
 
