--- a/modules/administration/pages/tuning-changelogs.adoc
+++ b/modules/administration/pages/tuning-changelogs.adoc
@@ -6,7 +6,8 @@ This data is downloaded by default, but it is not always useful information to k
 In order to limit the amount of changelog metadata which is downloaded and to save disk space, you can put a limit on how many entries to keep on disk.
 
 This configuration option is in the [filename]``/etc/rhn/rhn.conf`` configuration file.
-The parameter defaults to [systemitem]``20``; changing this value to [systemitem]``0`` will provide an unlimited number of entries.
+The parameter defaults to [systemitem]``20``.
+Changing this value to [systemitem]``0`` will provide an unlimited number of entries.
 
 ----
 java.max_changelog_entries = 20
