--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -146,7 +146,10 @@ For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc
 {debian} clients can require multiple GPG keys to be installed.
 ====
 
-When synchronizing third-party {debian} repositories, you will need to import the appropriate GPG key - otherwise the sync will fail. Unlike Red Hat-based repositories, only the metadata is signed - so entering a GPG key url for the software channel is not needed.
+When synchronizing third-party {debian} repositories, you will need to import the appropriate GPG key.
+If the GPG key is missing, synchronization will fail.
+ 
+Only the metadata is signed, therefore importing a GPG key for the software channel is not needed.
 
 To see which GPG keys {productname} currently has imported, run the following command:
 
