--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -234,8 +234,22 @@ zypper in grafana
 ----
 systemctl enable --now grafana-server
 ----
-. Check that the Grafana interface is loading correctly.
-    In your browser, navigate to the URL of the server where Grafana is installed, on port 3000 (for example, [literal]``http://example.com:3000``).
+. In your browser, navigate to the URL of the server where Grafana is installed, on port 3000 (for example, [literal]``http://example.com:3000``).
+. On the login page, enter ``admin`` for username and password.
+. Click btn:[Log in]. If login is successful, then you will see a prompt to change the password.
+. Click btn:[OK] on the prompt, then change your password.
+. Move your cursor to the cog icon on the side menu which will show the configuration options.
+
+image::grafana_sidemenu_datasource.png[scaledwidth=40%]
+
+. Click on btn:[Data sources].
+. Click btn:[Add data source] to see a list of all supported data sources.
+. Choose the Prometheus data source.
+. Make sure to specify the correct URL of the Prometheus server.
+. Click btn:[Save & test].
+. To import a dashboard click the btn:[+] icon in the side menu, and then click btn:[Import].
+. For {productname} server overview load the dashboard ID: ``17569``.
+. For {productname} clients overview load the dashboard ID: ``17570``.
 
 image::monitoring_grafana_example.png[scaledwidth=80%]
 
