--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -236,7 +236,8 @@ systemctl enable --now grafana-server
 ----
 . In your browser, navigate to the URL of the server where Grafana is installed, on port 3000 (for example, [literal]``http://example.com:3000``).
 . On the login page, enter ``admin`` for username and password.
-. Click btn:[Log in]. If login is successful, then you will see a prompt to change the password.
+. Click btn:[Log in]. 
+    If login is successful, then you will see a prompt to change the password.
 . Click btn:[OK] on the prompt, then change your password.
 . Move your cursor to the cog icon on the side menu which will show the configuration options.
 
