--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -133,7 +133,7 @@ endif::[]
 
 Based on the experience and different deployments that are in use, the advice for optimal performance of {productname} Server with an adequate number of proxies is to not exceed 10,000 clients per single server.
 It is highly recommended to move to the Hub setup and involve consultancy when you have more than 10,000 clients.
-Without fine tuning and an adequate number of proxies, such a large number of clients can lead to performance issues.
+Even with fine-tuning and an adequate number of proxies, such a large number of clients can lead to performance issues.
 
 For more information about managing a large number of clients, see xref:specialized-guides:large-deployments/multi-server.adoc[].
 ====
