--- a/modules/salt/pages/salt-ssh.adoc
+++ b/modules/salt/pages/salt-ssh.adoc
@@ -30,6 +30,18 @@ Salt SSH relies on a roster to obtain details such as hostname, ports, and the S
 {productname} keeps these details in the database and makes them available to Salt by generating a temporary roster file for each Salt SSH call.
 The location of the temporary roster file is supplied to `salt-ssh` using the `--roster-file= option`.
 
+For the registered clients [option]``roster`` set to `uyuni` is used instead to get the roster from the database with `uyuni` salt roster module.
+
+[IMPORTANT]
+====
+It is not recommended to run [command]``salt-ssh`` as [literal]``root`` user. This can cause permission issues the next time {productname} tries to use Salt SSH.
+Use [command]``mgr-salt-ssh``, which changes the effective user to [literal]``salt`` and avoids file permission issues.
+If you want to use [command]``mgr-salt-ssh`` with a user other than [literal]``root``, the user should have the permission to change effective user to [literal]``salt``.
+====
+
+[command]``mgr-salt-ssh`` uses [option]``roster`` set to [literal]``uyuni`` by default, if neither [option]``roster`` nor [option]``roster-file`` specified in the command line.
+It helps to call Salt commands to the registered Salt SSH clients with no roster file generation.
+
 
 
 == Authentication
