--- a/modules/reference/pages/admin/payg.adoc
+++ b/modules/reference/pages/admin/payg.adoc
@@ -4,7 +4,7 @@
 The menu:Admin[{payg}] section allows you to view and manage {payg} instances.
 Every instance shows its description and connection data.
 
-To add new instance, click [button]``Add {payg}``.
+To add new instance, click btn:[Add {payg}].
 Click an instance to modify its details.
 
 For more information, see xref:installation-and-upgrade:connect-payg.adoc[].
